[CHORE]: Change Swagger API Docs name
