# docs/swagger.json
@@ -27,12 +27,36 @@
                     "application/json"
                 ],
                 "tags": [
-                    "root"
+                    "Test Endpoint"
                 ],
                 "summary": "Show the status of server.",
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/test": {
+            "get": {
+                "description": "not implement code error.",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "root"
+                ],
+                "summary": "Show not implement code error.",
+                "responses": {
+                    "501": {
+                        "description": "Not Implemented",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
